Revision history for Dist-Zilla-Plugin-Git-FilePermissions

{{$NEXT}}

0.003  2017-10-20 23:39:10 UTC

  - Added a default option to specify default permissions

0.002  2017-10-16 21:46:46 UTC

  - Fix the tests for Windows

0.001  2017-10-15 19:39:17 UTC

  - Initial release